# bookings

./: .env.example  .gitignore  Makefile  README.md  SPEC-CRM.md  SPEC-W3.md  SPEC-W6.md  SPEC-W7.md  SPEC-W8.md  SPEC.md  docker-compose.yml
apps/admin-web/: .dockerignore  .env.example  Dockerfile  README.md  middleware.ts  next.config.ts  package.json
apps/marketing/: README.md  index.html  main.js  styles.css
deploy/k3s/: README.md  booking-deployment.yaml  identity-deployment.yaml  kind-config.yaml  kustomization.yaml  livekit-server.yaml  mirror-maker2.yaml  namespace.yaml  notification-deployment.yaml  voice-worker-hpa.yaml  voice-worker.yaml
deploy/livekit-sip/: dispatch-rule.yaml  setup.sh  trunk-config.example.yaml
docs/: ARCHITECTURE.md  ROADMAP.md  STRATEGY.md  VOICE-SCALING.md  billing.md  embedding.md  geospatial-infra.md  geospatial.md  industries.md  marketplace.md  plugins.md  telephony.md
docs/ADRs/: 0007-ledger-and-gateway-simplifications.md  0008-production-topology.md
docs/compliance/: ndpa.md
docs/integrations/: messaging-channels.md  twenty-crm.md  whatsapp-telegram.md
docs/runbooks/: capacity-planning.md  local-dev.md  operations.md  secrets.md  security.md
docs/security/: roles.md
industries/: agri-input.yaml  agriculture.yaml  banking.yaml  civic-services.yaml  clinic.yaml  consultancy.yaml  ecommerce.yaml  education.yaml  entertainment.yaml  fashion.yaml  government.yaml  healthcare.yaml  index.json  insurance.yaml  isp-installer.yaml  law-enforcement.yaml  legal-aid.yaml  logistics.yaml  microfinance.yaml  neighborhood-watch.yaml  nigeria-sme.yaml  pharmacy.yaml  recruitment.yaml  religious.yaml  salon.yaml  stock-brokerage.yaml  support-desk.yaml  transportation.yaml  travel.yaml  utilities-payg.yaml  vocational.yaml
infra/: docker-compose.core.yml  docker-compose.crm.yml  docker-compose.edge.yml  docker-compose.lakehouse.yml  docker-compose.observability.yml
infra/apisix/: apisix.yaml  config.yaml
infra/backups/: README.md  backup.sh  restore.sh
infra/compose/: geolibre.compose.yml
infra/fluvio/: README.md  deploy.sh  kafka-sink-connector.yaml  setup-topics.sh  start-cluster.sh
infra/fluvio/pii-redact/: Cargo.toml  README.md  SmartModule.toml  topic-setup.sh
infra/fluvio/pii-redact/src/: lib.rs
infra/kafka/: README.md  create-topics.sh
infra/keycloak/: realm-opendesk.json
infra/mojaloop/: README.md
infra/observability/: loki-config.yaml  otel-collector-config.yaml  promtail-config.yaml
infra/openappsec/: local_policy.yaml
infra/opensearch/: README.md  setup-indices.sh
infra/permify/: load-schema.sh  schema.perm
infra/privacy/: ndpa-profile.env
infra/temporal/: README.md
infra/twenty/: README.md  setup-webhooks.sh
scripts/: install-pack.sh  security-scan.sh  seed-demo.sh  seed-geo.sh  seed-industries.sh  smoke-test.sh  validate_pack.py
services/analytics-pipeline/: Dockerfile  README.md  pyproject.toml
services/analytics-pipeline/.pytest_cache/v/cache/: nodeids
services/analytics-pipeline/analytics_pipeline/: __init__.py  config.py  consumer.py  iceberg_tables.py  main.py  mapping.py  metering.py  metrics.py  recommendations.py  server.py
services/analytics-pipeline/tests/: test_dbt_conformance.py  test_mapping.py  test_metering.py  test_recommendations.py
services/billing-engine/: Cargo.toml  Dockerfile  README.md
services/billing-engine/migrations/: 0001_init.sql
services/billing-engine/src/: config.rs  consumer.rs  dunning.rs  invoices.rs  ledger.rs  main.rs  metering.rs  models.rs  payments_qr.rs  routes.rs
services/conversation-service/: Dockerfile  README.md  pyproject.toml
services/conversation-service/app/: __init__.py  config.py  dapr_client.py  db.py  events.py  indexer.py  intel.py  logging.py  main.py  models.py  privacy.py  quality.py  retention.py  routes.py  sinks.py
services/conversation-service/tests/: smoke_test.py  test_intel.py  test_quality.py  test_retention.py
services/gateway-edge/: Cargo.toml  Dockerfile  README.md
services/gateway-edge/src/: auth.rs  bus.rs  config.rs  enriched_consumer.rs  fluvio_consumer.rs  kafka_consumer.rs  main.rs  metrics.rs  ws.rs
services/knowledge-service/: Dockerfile  README.md  pyproject.toml
services/knowledge-service/.pytest_cache/v/cache/: nodeids
services/knowledge-service/app/: __init__.py  analytics.py  chunking.py  config.py  dapr_client.py  db.py  embeddings.py  logging.py  main.py  rrf.py  search.py  sqlguard.py  suggestions.py
services/knowledge-service/tests/: test_chunking.py  test_rrf.py  test_sqlguard.py  test_suggestions.py
services/payments-service/: Cargo.toml  Dockerfile  README.md
services/payments-service/src/: config.rs  consumer.rs  dapr.rs  events.rs  main.rs  mojaloop.rs  routes.rs
services/payments-service/src/ledger/: mod.rs  sim.rs  tigerbeetle.rs
services/voice-agent-runtime/: .dockerignore  Dockerfile  README.md  docker-compose.fragment.yml  pyproject.toml
services/voice-agent-runtime/.pytest_cache/v/cache/: nodeids
services/voice-agent-runtime/app/: __init__.py  async_tools.py  chat.py  config.py  control_plane.py  dapr_client.py  elevenlabs_adapter.py  escalation.py  events.py  intent_router.py  livekit_worker.py  logging.py  main.py  metrics.py  multilang.py  plugin_tools.py  prompts.py  session_state.py  sip.py  tenant_context.py  tools.py  voiceprint.py
services/voice-agent-runtime/app/pipeline/: __init__.py  llm.py  stt.py  tts.py
services/voice-agent-runtime/eval/: README.md  ab_test.py  eval.py
services/voice-agent-runtime/eval/personas/: salon_warm_concise.md
services/voice-agent-runtime/eval/scenarios/: cancel_flow.yaml  clinic_intake_question.yaml  escalation_request.yaml  salon_booking_happy.yaml
services/voice-agent-runtime/sidecar/: Dockerfile  piper_server.py
services/voice-agent-runtime/tests/: conftest.py  test_async_tools.py  test_chat_stream.py  test_escalation.py  test_intent_router.py  test_llm_fallback.py  test_metrics.py  test_multilang.py  test_plugin_tools.py  test_session_metrics.py  test_sip.py  test_voiceprint.py  test_worker_scaling.py
(+315 files in other folders)
