[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opendesk-conversation-service"
version = "0.1.0"
description = "OpenDesk conversation-service: conversation/turn persistence, transcript streaming (Fluvio/Kafka) and OpenSearch indexing"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "httpx==0.27.2",
    "asyncpg==0.29.0",
    "aiokafka==0.10.0",
    "opensearch-py==2.6.0",
    "structlog==24.4.0",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
fluvio = ["fluvio==0.16.1"]
dev = ["pytest==8.3.4", "pytest-asyncio==0.24.0", "ruff==0.8.4"]

[tool.setuptools.packages.find]
include = ["app*"]
