[package]
name = "gateway-edge"
version = "0.1.0"
edition = "2021"
description = "OpenDesk edge gateway: per-tenant WebSocket fan-out over Kafka/Fluvio events (SPEC §4/§5)"

[features]
# Default build: Kafka primary consumer only; the Fluvio live-tail is a
# compiled-in stub. Build with `--features fluvio-live` to enable the real
# Fluvio consumer for `opendesk.transcripts-raw` (see src/fluvio_consumer.rs).
default = []
fluvio-live = ["dep:fluvio"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
# axum's `ws` extractor is built on tokio-tungstenite; kept as an explicit
# dependency per the service contract.
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures-util = "0.3"
thiserror = "1"
# Optional: real Fluvio consumer (feature `fluvio-live`).
fluvio = { version = "0.21", optional = true }
