[project]
name = "opendesk-knowledge-service"
version = "0.1.0"
description = "OpenDesk knowledge-service: KB ingest, chunking, embeddings, hybrid (BM25 + kNN, RRF) search over OpenSearch."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.30.6",
    "httpx==0.27.2",
    "asyncpg==0.29.0",
    "opensearch-py[async]==2.6.0",
    "sentence-transformers==3.0.1",
    "structlog==24.4.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
